# LLMHQm

./: README.md  docker-compose.yml
.github/: repo-metadata.yml
docs/: DATABASE.md  DATA_AUDIT.md  DEPLOYMENT.md  LAYER_A_COMPLETE.md  LAYER_A_CONFIG.md  LAYER_D.md  RUST_IMPLEMENTATION.md  STATUS.md
monitoring/grafana/dashboards/: llmhq-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: prometheus.yml
rust/: .env  .env.example  ARCHITECTURE.md  Cargo.toml  Dockerfile
rust/migrations/: 001_initial.sql  001_initial_pg.sql
rust/src/: integration.rs  lib.rs  main.rs  types.rs
rust/src/analysts/: engine.rs  mod.rs
rust/src/cio/: mod.rs
rust/src/collectors/: binance.rs  mod.rs  wired.rs
rust/src/db/: mod.rs
rust/src/executor/: mod.rs
rust/src/narrator/: mod.rs
rust/src/polymarket/: mod.rs
rust/src/timing/: mod.rs
src/: analysts_external.py  cio_client.py  collector.py  features.py  layer_a_collector.py  layer_a_complete.py  layer_a_enhanced.py  paper_executor.py  timing_and_risk.py
