[package]
name = "llmhq"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["LLMHQ Team"]
description = "LLM Heuristic Quant - Hybrid Rust + LLM trading system"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "parking_lot"] }
tokio-util = { version = "0.7", features = ["codec"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "json", "migrate"] }
deadpool = "0.10"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging & metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Collections
hashbrown = "0.14"
indexmap = "2.1"

# Math
rust_decimal = { version = "1.33", features = ["serde"] }
statrs = "0.16"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
dashmap = "5.5"
parking_lot = "0.12"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bin]]
name = "llmhq"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
